# MeetupSessions

./: .gitattributes  README.md
01st Meetup-May2018/: Instabug-Meetup.key
02nd Meetup-Jun2018/: Blogging Session.key
03rd Meetup-Aug2018/UI-Approaches/: Approaches to UI Development.key
06th Meetup-Jan2019/Karim Ebrahim/: Auto Boilerplate Code in Swift.key
08th Meetup-July2019/Ehab Amer/: RW-Video-Template-2.1.key
09th Meetup-Sept2019/Omar Sherif/: README.md
10th Meetup-Nov2019/: CONDUCTORS.pptx
13th Meetup-Jan2023/Architecture Homicide/: Readme.md
13th meetup/Architecture Homicide/: Readme.md
14th meetup - June 2023/Clean Architecture With MVVM/: README.md
14th meetup - June 2023/Modular iOS Architecture/: README.md
16th Meetup-July2024/Demystifying Dependency Injection | Mostafa Nafie/: README.md
1st Meetup-May2018/: Instabug-Meetup.key
20th Meetup-Nov2024/: SwiftCario_IntroToModernConcurency.key  Type Driven Design with Swift.key
2nd Meetup-Jun2018/: Blogging Session.key
2nd Meetup-Jun2018/Threadsafe/: Instabug_iOS.key
6th Meetup-Jan2019/Omar Sherif/libraries_example/: CMakeLists.txt
6th Meetup-Jan2019/Omar Sherif/libraries_example/app_runtime_link/: CMakeLists.txt
6th Meetup-Jan2019/Omar Sherif/libraries_example/app_static/: main.cpp
6th Meetup-Jan2019/Omar Sherif/libraries_example/dynamic/: idea.cpp
6th Meetup-Jan2019/Omar Sherif/libraries_example/dynamic/include/dynamic/: idea.h
6th Meetup-Jan2019/Omar Sherif/libraries_example/static/: idea.cpp
6th Meetup-Jan2019/Omar Sherif/libraries_example/static/include/static/: idea.h
(+137 files in other folders)
